# digraphs-with-text

./: CHANGELOG  CONFIG.md  CREDITS.md  Dwt.cabal  Dwt.hs  LICENSE  MyGraph.hs  README.md  Reln.hs  Test.hs  TotalDescendents.hs  dwt.hs  gadt.hs  glossary.hs  grep-hs.sh  grep-most.sh  how_it_works.txt  id=content=address.md  imports.hs  refactor-QRelSpec  stack.yaml  sub.sh  sub2.sh  todo|possib.txt  tree view for rslt.md  use what-who-called-what files.md
FROZE 2015 08 07/FROZE 2015 07 15/: TotalDescendents.hs
FROZE 2015 08 07/english/: how_it_works.txt  motivation.txt
FROZE 2015 08 07/src/Dwt/: View.hs
FROZE, earlier version, 2015 08 07/: stack.yaml
FROZE, earlier version, 2015 08 07/FROZE 2015 07 15/stale/: tests.hs
FROZE, earlier version, 2015 08 07/english/: todo,maybe.txt
FROZE, earlier version, 2015 08 07/other/: graph,big.hs  graph,small.hs
FROZE, earlier version, 2015 08 07/other/infreq/: view_lang.hs
Hash/: levels.hs  minimal-megaparsec.hs  the-hash-language.md  why-nest-relationships.md  why-use-hash.md
_cold, earlier version, 2015 08 07/: Dwt.cabal
_cold, earlier version, 2015 08 07/other/infreq/: graph_printout.hs
_cold, earlier version, 2015 08 07/src/: Dwt.hs
_cold, earlier version, 2015 08 07/src/Dwt/: Graph.hs  Subgraph.hs  View.hs
argument_for_the_rslt/: it.odt
cool,aimless/: existentials.hs
data/: #root+7.mm#  .#root+7.mm  agent.dwt  all.dwt  codg_dwt.dwt  coding_dwt.dwt  frog.to_recreate.hs  minimalGraph.hs  tiny.mm
data/frog/: email.hs  it.dwt  to_recreate.hs  transcript.hs
english/: todo,maybe.txt
exec/: Test.hs
forever-parsers/: broken-many.hs  one-liner.hs  ten-liner.hs
forever-parsers/redundant/: ten-liner.hs
howto/: abbreviations.txt  demo  demo.hs  file_io.hs  futz.hs  load,save,parse.hs  relSpec.hs  search,one-generation.hs  searches.hs  topological-sort.hs  unlabeled joints are position-insensitive.md  update.hs
howto/easy/: build.hs
howto/infreq/: argument for view patterns, maybe.hs  mini_dwt.hs  types_in_a_nutshell.hs
howto/megaparsec/: disjunction.hs  experim.buggy.hs  experim.hs  minimal.hs  tutorial.hs
howto/recursive-search/: dfs,bfs.hs  relevant-types.hs
howto/search,recursive/: dfs,bfs.hs  relevant-types.hs
howto|notes to self/: agent,parse&futz.hs  file_io.hs  futz.hs  getAGraph.hs  load,futz,save.hs  load,futz.hs  load,save,parse.hs  load_agent.hs  parse&futz.hs  parse.hs  update.hs
howto|notes to self/infreq/: fglViewPatterns.hs  types_in_a_nutshell.hs
infreq/cool,aimless/: typeapplication.hs
infreq/data/: all.dwt  root+7+some_ids.mm  root+7.mm
infreq/data/frog/: README.txt  email.hs  to_recreate.hs  transcript.hs
infreq/lessons-learned/forever-loops/: PUNCHLINE  broken-do.hs  broken-many.hs
infreq/plans/: nested-edit-commands.hs  tree view for rslt.md  use what-who-called-what files.md
introduction/: Minimal_Types.hs  demo.hs  demo.with_output.hs  module-hierarchy.md  try-the-ui.md
introduction/the_rslt,_why_and_how/: it.odt  new.odt  post-ellen.dot  tiny_announce.txt  tiny_announce.txt~
introduction/the_rslt,_why_and_how/draft_1/images/: CONVERSION.pdf_to_png.script
introduction/the_rslt,_why_and_how/obsolete/: new.txt  rslt,arg.txt
lib/: Dwt.hs
lib/Dwt/: View.hs
other/: graph,big.hs  hand-imports.hs  hand_test.hs  hand_test_4.hs  imports.hs  weird characters.hs
other/infreq/: benched.hs
scripts/: count-lines.sh  egrep-most.sh  grep-hs.sh  grep-most.sh  imports.hs  sub2.sh  wordCharFromFile.txt
src/: Dwt.hs  imports.hs
src/Dwt/: Add.hs  Brick.hs  Edit.hs  Error.hs  Explore.hs  FileIO.hs  Graph.hs  Graph_2.hs  Leaf.hs  Measure.hs  MegaparsecExpr.hs  Minimal_Types.hs  MkTplt.hs  MmParse.hs  Parse.hs  ParseMm.hs  ParseUtils.hs  ParsecUtils.hs  ReadMmFormat.hs  Search.hs  SearchSum.hs  Show.hs  Subgraph.hs  TODO_Types.hs  Tplt.hs  Types.Todo.hs  Types.hs  UI.hs  Unused.hs  Util.hs  View.hs  Wiz.hs  hiding.hs
src/Dwt/Hash/: Insert.hs  Parse.hs  ParseEo.hs
src/Dwt/Initial/: Measure.hs  ParseUtils.hs  Types.hs  Util.hs
src/Dwt/Parse/: Add.hs  Insertion.hs  User.hs
src/Dwt/Query/: Cycles.hs  Initial.hs  Main.hs  Misfits.hs  QNode.hs
src/Dwt/Search/: Base.hs  Branch.hs  Initial.hs  Local.hs  Misfits.hs  Node.hs  Parse.hs  QNode.hs  Recursive.hs
src/Dwt/Second/: Graph.hs  Misc.hs  MkTplt.hs  QNode.hs
src/Dwt/Show/: Expr.hs  GoingAway.hs
src/Dwt/UI/: Parse.hs  State.hs  Terminal.hs
src/Dwt/stale/: MmParse.hs
stale/: TBranch_byHand.hs
stale/Dwt/: Explore.hs  MmParse.hs  ShowExtras.hs  Wiz.hs
stale/stale/: Reln.hs
stale/test/: TSearch.hs
test/: Main.hs  Spec.hs  Spec.hs~  TAdd.hs  TData.hs  TData_2.hs  TGraph.hs  TMmParse.hs  TParse.hs  TSearch.hs  TShow.hs  TView.hs  mini_dwt.hs  monad_fail_problems.hs  proof, obsolete.hs
todo/: existentials.hs
unused/: Sum.hs
why/: argument.odt
why/obsolete/: rslt,arg.txt
why_to_use_the_rslt/: it.odt
wx/: Paint.hs
