name:                Dwt
version:             0.1.0.0
synopsis:            A data type that generalizes lists, tables, trees and graphs
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Benjamin Brown
maintainer:          jeffbrown.the@gmail.com
-- copyright:           
category:            Graph
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
   
library
  hs-source-dirs:      src
  exposed-modules:     Dwt
                     , Dwt.Add
                     , Dwt.FileIO
                     , Dwt.Leaf
                     , Dwt.Graph
                     , Dwt.Parse
                     , Dwt.ParsecUtils
                     , Dwt.Search
                     , Dwt.Show
                     , Dwt.Types
                     , Dwt.UI
                     , Dwt.Util

  build-depends:       base
                     , containers 
                     , fgl
                     , HUnit
                     , lens
                     , megaparsec
                     , mtl
                     , parsec
                     , regex-compat
                     , text
                     , time

                     -- from Snake
                     , brick
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty

                     -- for Brick
                     , text-zipper

  other-modules:

  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TParse
                     , TData
                     , TGraph
                     -- , TShow
                     , TSearch

  build-depends:       Dwt
                     , HUnit

                     , base
                     , containers
                     , fgl
                     , lens
                     , megaparsec
                     , time

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JeffreyBenjaminBrown/digraphs-with-text
