name:                Dwt
version:             0.1.0.0
synopsis:            A data type that generalizes lists, tables, trees and graphs
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Benjamin Brown
maintainer:          jeffbrown.the@gmail.com
-- copyright:           
category:            Graph
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
   
library
  hs-source-dirs:      src, test
  exposed-modules:     Dwt
                     , Dwt.Leaf
                     , Dwt.Graph
                     , Dwt.Parse.User
                     , Dwt.Parse.Add 
                     , Dwt.Search.Local
                     , Dwt.Search.Recursive                    
                     , Dwt.Show
                     , Dwt.Types
                     , Dwt.UI
                     , Dwt.Util

  build-depends:       base
                     -- , conduit
                     , containers 
                     , fgl
                     , HUnit
                     , lens
                     , megaparsec
                     , mtl
                          -- only for MonadError, I think
                     , transformers
                     , either
                         -- EitherT is in either, not transformers
                     , parsec
                     , regex-compat
                     , text
                     , time

                     -- from Snake
                     , brick
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty

                     -- for Brick
                     , text-zipper

  other-modules:   TData
                   , Main
                   , TGraph
                   , TAdd
                   , TParse
                   , TShow
                     -- for testing in GHCI

  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TParse
                     , TData
                     , TGraph
                     , TShow
                     , TAdd

  build-depends:       Dwt
                     , HUnit

                     , base
                     , containers
                     , fgl
                     , lens
                     , megaparsec
                     , transformers
                     , time

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JeffreyBenjaminBrown/digraphs-with-text
