name:                Dwt
version:             0.1.0.0
synopsis:            A data type that generalizes lists, tables, trees and graphs
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Benjamin Brown
maintainer:          jeffbrown.the@gmail.com
category:            Graph
build-type:          Simple
cabal-version:       >=1.10
   
library
  hs-source-dirs:      src, test
  exposed-modules:     Dwt
                     , Dwt.Leaf
                     , Dwt.Graph
                     , Dwt.Hash.Parse
                     , Dwt.Hash.Parse
                     , Dwt.Hash.Insert 
                     , Dwt.ParseUtils
                     , Dwt.Search.Branch
                     , Dwt.Search.Node
                     , Dwt.Search.Parse
                     , Dwt.Show
                     , Dwt.Tplt
                     , Dwt.Types
                     , Dwt.UI
                     , Dwt.Util

  build-depends:       base
                     , containers 
                     , fgl
                     , HUnit
                     , lens
                     , microlens
                     , microlens-th
                     , megaparsec
                     , mtl
                          -- only for MonadError, I think
                     , either
                          -- for Control.Monad.Trans.Either (for in repl)
                     , transformers
                     , parsec
                     , regex-compat
                     , text

                     -- from Snake
                     , brick
                     , vty
                     , text-zipper

  other-modules:   TData
                   , Main
                   , TGraph
                   , TAdd
                   , TParse
                   , TShow
                     -- for testing in GHCI

  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TParse
                     , TData
                     , TGraph
                     , TShow
                     , TAdd

  build-depends:       Dwt
                     , HUnit
                     , base
                     , containers
                     , fgl
                     , lens
                     , megaparsec
                     , transformers

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JeffreyBenjaminBrown/digraphs-with-text
